# AR_surrogate_and_inverse

./: .gitignore  AGENTS.md  DIRECTORY_PLAN.md  README.md  TODO.md  pyproject.toml
docs/: active_learning_plan.md  dataset_schema.md  direction_contract.md  experiment_report_template.md  formal_rectified_server_handoff.md  inverse_output_contract.md  model_capacity_decision_rules.md  repository_cleanup_report.md  repository_layout_v2.md  sampling_policy.md  surrogate_model_card_template.md  task10_pilot_server_runbook.md  task11_production_server_handoff.md  task12_neural_medium_server_handoff.md  task13_high_accuracy_large_launch_addendum.md  task13_high_accuracy_large_server_handoff.md  task14_bias40_probe_handoff.md  task14_pairing_representation_contract.md  task14_rmft_projection_audit.md  task14_tb_pilot_contract.md  task14_transport_domain_contract.md  task15_inverse_ready_medium_handoff.md  task9_directional_smoke_training_note.md  tb_parameterization_decision.md
notebooks/: task13_btk_truth_vs_surrogate.ipynb
tests/: conftest.py  test_active_learning_plan_contract.py  test_bias40_probe_contract.py  test_dataset_generation_orchestration.py  test_dataset_schema.py  test_directional_high_accuracy_contract.py  test_directional_medium_neural_contract.py  test_directional_pilot_runbook.py  test_directional_production_contract.py  test_example_payload_artifact.py  test_experiment_report.py  test_formal_rectified_server_handoff_contract.py  test_forward_dependency_smoke.py  test_inverse_ready_medium_draft_contract.py  test_inverse_search.py  test_sampling_policy.py  (+27 more)
(+12978 files in other folders)
